--- a/config/database.yml
+++ b/config/database.yml
@@ -9,12 +9,9 @@
 #       Choose the win32 build.
 #       Install PostgreSQL and put its /bin directory on your path.
 development:
-  adapter: postgresql
-  encoding: unicode
+  adapter: sqlite
   database: RaceForMyDaughter_development
-  pool: 5
-  username: RaceForMyDaughter
-  password:
+
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
