--- a/config/database.yml
+++ b/config/database.yml
@@ -9,8 +9,8 @@
 #       Choose the win32 build.
 #       Install PostgreSQL and put its /bin directory on your path.
 development:
-  adapter: sqlite
-  database: RaceForMyDaughter_development
+  adapter: sqlite3
+  database: db/RaceForMyDaughter_development.sqlite
 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
